--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ before_install:
   - chmod 600 ~/.ssh/id_rsa
 addons:
   ssh_known_hosts: 111.231.1.210
+after_success:
+  - ssh liuqi@111.231.1.210 "./a.sh"
