--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install: cd Hello && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
 script: mvn test
 
 after_success:
-  - ssh liuqi@111.231.1.210 "./a.sh"
+  - ssh liuqi@111.231.1.210 -p 36302 "./a.sh"
 
 addons:
   ssh_known_hosts: 111.231.1.210
