--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ jdk:
 - openjdk8
 before_install:
 - openssl aes-256-cbc -K $encrypted_9655a05d2431_key -iv $encrypted_9655a05d2431_iv
-  -in id_rsa.enc -out ~/.ssh/id_rsa -d
-- chmod 600 ~/.ssh/id_rsa
+  -in id_rsa.enc -out id_rsa -d
+- chmod 600 id_rsa
+- mv id_rsa ~/.ssh/id_rsa
 install: cd Hello && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
 script: mvn test
 after_success:
